Correcao Encoder Bas64 SUN